fix: display work duration on one line only
I noticed when a work location address was too long the work duration will use multiple lines. Using `white-space: nowrap;` will make sure the work duration will be displayed on one line only.

--- a/assets/scss/work.scss
+++ b/assets/scss/work.scss
@@ -31,6 +31,7 @@
         .dates {
           font-size: $work-dates-font-size;
           font-weight: lighter;
+          white-space: nowrap;
         }
       }
     }
